syntax = "proto3";
package pb;

message HelloRequest {
  string username = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse){}
  rpc SayBye(HelloRequest) returns (HelloResponse){}
}